--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ archives_base_name=autostop
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.56.3+1.19
+configbuilder_version=1.0.5
